# q-business-jira-on-prem-connector

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  config.py  demo.py  document_processor.py  env.example  jira_client.py  jira_connector.py  main.py  pyproject.toml  qbusiness_client.py  requirements.txt  setup.py  test_connector.py
.amazonq/: mcp.json
.amazonq/prompts/: unit-test.md
.amazonq/rules/: doc-block.md
src/jira_q_connector/: __init__.py  __main__.py  acl_manager.py  cache_client.py  cli.py  cli_utils.py  config.py  document_processor.py  field_utils.py  jira_client.py  jira_connector.py  jira_q_sync_handler.py  qbusiness_client.py
terraform/: DEPLOYMENT_GUIDE.md  README.md  deploy.sh  env.terraform.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
